--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section></section>
+    <section>
       <a href="./index.html">Go to home</a>
+      <form class="form">
+        <label class="label">
+          Delay (ms)
+          <input class="input" type="number" name="delay" required />
+        </label>
+
+        <fieldset class="fieldset">
+          <legend>State</legend>
+          <label>
+            <input type="radio" name="state" value="fulfilled" required />
+            Fulfilled
+          </label>
+          <label>
+            <input type="radio" name="state" value="rejected" required />
+            Rejected
+          </label>
+        </fieldset>
+
+        <button class="btn" type="submit">Create notification</button>
+      </form>
     </section>
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
